# sbgc32-serial-api

./: .gitignore  CMakeLists.txt
drivers/LinuxDriver/: driver_Linux.c  driver_Linux.h
examples/Linux/DemoLaunch/: main.c  main.c_bak
serialAPI/: sbgc32.c  sbgc32.h
serialAPI/drivers/ArduinoDriver/: driver_Arduino.cpp  driver_Arduino.h
serialAPI/drivers/LinuxDriver/: driver_Linux.c  driver_Linux.h
serialAPI/drivers/STM32_Driver/: driver_STM32.c  driver_STM32.h
serialAPI/sources/adjvar/: adjvar.c  adjvar.h
serialAPI/sources/calib/: calib.c  calib.h
serialAPI/sources/core/: adjunct.h  core.c  core.h
serialAPI/sources/eeprom/: eeprom.c  eeprom.h
serialAPI/sources/gimbalControl/: gimbalControl.c  gimbalControl.h
serialAPI/sources/imu/: imu.c  imu.h
serialAPI/sources/profiles/: profiles.c  profiles.h
serialAPI/sources/realtime/: realtime.c  realtime.h
serialAPI/sources/service/: service.c  service.h
sources/core/: core.c  core.h
sources/gimbalControl/: gimbalControl.h
sources/imu/: imu.h
sources/realtime/: realtime.c  realtime.h
